--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "date-fns-tz": "3.2.0",
     "googleapis": "164.1.0",
     "next": "16.0.1",
-    "next-auth": "4.24.12",
+    "next-auth": "^5.0.0-beta.22",
     "nodemailer": "7.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
