--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@slack/web-api": "7.12.0",
     "date-fns": "4.1.0",
     "date-fns-tz": "3.2.0",
+    "gantt-task-react": "^0.3.9",
     "googleapis": "164.1.0",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.22",
